[package]
name = "soil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.106.1"
cranelift-module = "0.106.1"
cranelift-jit = "0.106.1"
cranelift-object = "0.106.1"
cranelift-native = "0.106.1"
extension-trait = "1.0.2"
